Password Manager 24.4.1
* Java 22
* JavaFX 21.0.2