@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright © 2017-2023 Petr Panteleyev <petr@panteleyev.org>
+  Copyright © 2017-2024 Petr Panteleyev <petr@panteleyev.org>
   SPDX-License-Identifier: BSD-2-Clause
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -9,30 +9,30 @@
 
     <groupId>org.panteleyev</groupId>
     <artifactId>password-manager</artifactId>
-    <version>23.4.1</version>
+    <version>24.4.1</version>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>20</maven.compiler.release>
-        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <maven.compiler.release>22</maven.compiler.release>
+        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
         <appModule>password.manager</appModule>
         <appMainClass>org.panteleyev.pwdmanager.PasswordManagerApplication</appMainClass>
         <timestamp>${maven.build.timestamp}</timestamp>
         <!-- Plugins -->
         <mavenResourcePluginVersion>3.3.1</mavenResourcePluginVersion>
-        <mavenCompilerPluginVersion>3.11.0</mavenCompilerPluginVersion>
+        <mavenCompilerPluginVersion>3.13.0</mavenCompilerPluginVersion>
         <mavenJarPluginVersion>3.3.0</mavenJarPluginVersion>
-        <mavenSurefirePluginVersion>3.0.0</mavenSurefirePluginVersion>
-        <mavenDependencyPluginVersion>3.5.0</mavenDependencyPluginVersion>
+        <mavenSurefirePluginVersion>3.2.5</mavenSurefirePluginVersion>
+        <mavenDependencyPluginVersion>3.6.1</mavenDependencyPluginVersion>
         <javaFxPluginVersion>0.0.8</javaFxPluginVersion>
-        <jpackageMavenPluginVersion>1.5.2</jpackageMavenPluginVersion>
+        <jpackageMavenPluginVersion>1.6.3</jpackageMavenPluginVersion>
         <!-- Dependencies -->
-        <javaFxVersion>20</javaFxVersion>
-        <javaFxHelpersVersion>1.12.1</javaFxHelpersVersion>
+        <javaFxVersion>21.0.2</javaFxVersion>
+        <javaFxHelpersVersion>1.13.0</javaFxHelpersVersion>
         <javaFreeDesktopVersion>0.5.0</javaFreeDesktopVersion>
-        <controlsFxVersion>11.1.2</controlsFxVersion>
-        <jUnitVersion>5.9.1</jUnitVersion>
+        <controlsFxVersion>11.2.1</controlsFxVersion>
+        <jUnitVersion>5.10.2</jUnitVersion>
     </properties>
 
     <dependencies>
@@ -109,9 +109,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mavenCompilerPluginVersion}</version>
-                <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -130,11 +127,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mavenSurefirePluginVersion}</version>
-                <configuration>
-                    <argLine>
-                        --enable-preview
-                    </argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -170,9 +162,6 @@
                         <modulePath>target/jmods</modulePath>
                     </modulePaths>
                     <destination>target/dist</destination>
-                    <javaOptions>
-                        <option>--enable-preview</option>
-                    </javaOptions>
                 </configuration>
 
                 <executions>
@@ -213,7 +202,6 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
                                 <option>-Dpassword.file=${password.file}</option>
                             </options>
                         </configuration>
@@ -222,7 +210,6 @@
                         <id>debug</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                 <option>-Dpassword.file=${password.file}</option>
                             </options>
